--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=82d34bff9cf55a747773",
+    "/css/app.css": "/css/app.css?id=70fd2e6ec19420d92e97"
 }
